--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rewards_backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "node server.js"
@@ -15,6 +15,7 @@
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "json2csv": "^4.2.1",
     "mongoose": "^5.2.9"
   }
 }
